US-ISP ist ein Pseudonym

--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -615,10 +615,11 @@ Zur Evaluierung wurden zum einen Simulationen und zum anderen die ebenfalls in
 \cite{tD2_WWMA10} vorgestellte, auf Linux MPLS basierende reale Implementierung von 
 R3 verwendet. 
 
-Die verwendeten Netztopologien zur Simulation sind zum einen die Topologie von 
-US-ISP, einem führenden Internet Service Provieder und zum anderen die durch das 
-Rocketfuel-Projekt \cite{tD2_SpMW02} aufgezeichneten Netztopologien von Level-3, 
-SBC und UUNet, sowie einer mittels GT-ITM generierten Backbonetopologie.
+Die verwendeten Netztopologien zur Simulation sind zum einen die Topologie 
+eines Tier-1 Internet Servie Providers (ISP) nachfolgend US-ISP genannt, und 
+zum anderen die durch das Rocketfuel-Projekt \cite{tD2_SpMW02} aufgezeichneten 
+Netztopologien von Level-3, SBC und UUNet, sowie einer mittels GT-ITM 
+generierten Backbonetopologie.
 Zur Evaluierung der experimentellen Implementierung von R3 wurde mittels Emulab 
 die Backbone-Topologie des Abilene Netzwerks emuliert.
 
