--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -681,19 +681,20 @@ Für Zwei-Fehler Events ist die dritte Gruppe bis zu $3,7$-mal schlechter als im
 Optimalfall möglich wäre und bis zu 94\% über dem höchsten Wert der ersten Gruppe. 
 Bei Drei-Fehler Events beträgt der Abstand hingegen mindestens 50\% 
 
-\begin{figure}[!h] 
-\centering
-\includegraphics*[width=8cm]{tD2_USISP_OneFailure} 
-\end{figure}
 \begin{figure}[!h]
+\begin{minipage}[h]{16cm}
+	\centering
+	\includegraphics*[width=8cm]{tD2_USISP_OneFailure} 		
+\end{minipage}
+\vfill
 \begin{minipage}[h]{8cm}
 	\centering
-	\includegraphics[width=8cm]{tD2_USISP_OneFailure}		
+	\includegraphics[width=8cm]{tD2_USISP_TwoFailure}		
 \end{minipage}
 \hfill
 \begin{minipage}[hbt]{8cm}
 	\centering
-	\includegraphics[width=8cm]{tD2_USISP_TwoFailure}	
+	\includegraphics[width=8cm]{tD2_USISP_ThreeFailure}	
 \end{minipage}
 \caption{Einzel-, Zwei- und zufällige Drei-Fehler Szenarien (US-ISP)\cite{tD2_WWMA10}}
 \label{tD2_USISPMeasurement}
